--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "archiver": "^5.3.2",
         "axios": "^1.5.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -16,6 +17,7 @@
         "express-rate-limit": "^6.8.1",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
+        "multer": "^2.0.2",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
